# backtester

./: .gitignore  BACKTESTER_COMPREHENSIVE_DOCS.md  BACKTESTER_DECISIONS_USAGE.md  BACKTESTER_USAGE.md  Cargo.toml  PORTFOLIO_BACKTEST.md  PORTFOLIO_BACKTEST_USAGE.md  README.md  REFACTORING_PLAN.md  TESTING_DOCUMENTATION.md  backtest_output_1234.parquet  backtest_output_LC1.parquet  clickhouse.rs  history.parquet  lib.rs  main.rs  out2.csv  output.parquet  output2.parquet  pypolkadot.fossil  run_all.sh  run_portfolio_backtest.sh  run_stocks.sh
final/: crypto_testing.csv  stocks_testing.csv
output/: output_bbdc.parquet  output_cent.parquet  output_onct.parquet  output_via.parquet
output_crypto/: 00.parquet  1inch.parquet  1inch:.parquet  aac.parquet  aave.parquet  aave:.parquet  abbc.parquet  abt.parquet  aca.parquet  acat.parquet  ach.parquet  acm.parquet  acs.parquet  act.parquet  ada.parquet  adabull.parquet  adx.parquet  ae.parquet  aergo.parquet  ageur.parquet  agix.parquet  agld.parquet  aid.parquet  aio.parquet  aioz.parquet  air.parquet  akro.parquet  akt.parquet  albt.parquet  alcx.parquet  aleph.parquet  alg.parquet  algo.parquet  alice.parquet  alpaca.parquet  alpha.parquet  alpine.parquet  alt.parquet  alusd.parquet  amb.parquet  (+818 more)
performance/: ALL.csv  LC.csv  MC.csv  Micro.csv  SC.csv
portfolio_results/: fix_csv.py
python/: performance.py
score/: crypto_20240331.csv  crypto_20240407.csv  stocks_20240401.csv
src/: backtester_decisions.py  backtester_decisions.rs  clickhouse.rs  config.rs  display.rs  lib.rs  main.rs  main_test.rs  portfolio_accounting.rs  portfolio_backtest.rs  sqlx.rs  strategy_config.rs  tests.rs
src/signals/: README copy.md  sample copy.rs
test_reports/: performance_summary.json
