[package]
name = "backtester"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.9"
polars = { version = "0.46.0", features = ["timezones","lazy","csv","temporal","describe","json","parquet","dtype-datetime","streaming","concat_str","list_eval","dtype-array","rank","dtype-struct","rolling_window","strings","sql"]}
reqwest = { version = "0.11.18", features = ["blocking"] }
futures = "0.3.30"
tokio = { version = "1.44", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
clickhouse = { version = "0.13.2", features = ["native-tls"] } 
serde_json = "1.0.114"
chrono = { version = "0.4", features = ["serde"] }
