[package]
name = "backtester"
version = "0.2.1"
edition = "2021"
default-run = "backtester"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
csv = "1.1"
rayon = "1.9"
polars = { version = "0.46.0", features = ["timezones","lazy","csv","temporal","describe","json","parquet","dtype-datetime","streaming","concat_str","list_eval","dtype-array","rank","dtype-struct","rolling_window","strings","sql"]}
reqwest = { version = "0.11.18", features = ["blocking"] }
futures = "0.3.30"
tokio = { version = "1.44", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
clickhouse = { version = "0.14.2", features = ["native-tls"] } 
serde_json = "1.0.114"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
sysinfo = "0.31"

[[bin]]
name = "portfolio_backtest"
path = "src/portfolio_backtest.rs"
